--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,6 +9,10 @@ spring:
       value.serializer: org.springframework.kafka.support.serializer.JsonSerializer
   application:
     name: data-ingestion-service
+  data:
+    redis:
+      host: localhost
+      port: 6379
 
 management:
   endpoints:
